--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import io.github.tropheusj.auto_maintainer.AutoMaintainerPlugin
+
 //file:noinspection GroovyAssignabilityCheck
 //file:noinspection GroovyAccessibility
 plugins {
@@ -8,6 +10,8 @@ plugins {
 	id "org.ajoberstar.grgit" version "4.1.1"
 	id "maven-publish"
 }
+
+apply plugin: AutoMaintainerPlugin
 
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
@@ -33,21 +37,20 @@ dependencies {
 	// dev environment
 	minecraft("com.mojang:minecraft:${project.minecraft_version}")
 	mappings loom.layered {
-		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.qm_version}:v2"))
-		it.parchment("org.parchmentmc.data:parchment-1.18.2:BLEEDING-20220423.075040-3@zip") // https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/parchment-1.18.2/BLEEDING-SNAPSHOT
+		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.qm_build}:v2"))
 		it.officialMojangMappings {
 			setNameSyntheticMembers(false)
 		}
 	}
 	modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
 	modLocalRuntime("maven.modrinth:lazydfu:0.1.2")
-	modLocalRuntime("maven.modrinth:suggestionproviderfabric:1.0.1")
+	modLocalRuntime("maven.modrinth:suggestionproviderfabric:${project.suggestion_provider_fabric_version}")
 	modLocalRuntime("mcp.mobius.waila:wthit:fabric-${project.wthit_version}")
 	modLocalRuntime("maven.modrinth:sodium:${project.sodium_version}") // rendering beware
     localRuntime("org.joml:joml:1.10.4")
 	modLocalRuntime("maven.modrinth:lithium:${project.lithium_version}")
 	modLocalRuntime("maven.modrinth:iris:${project.iris_version}")
-	modLocalRuntime("com.terraformersmc:modmenu:${project.modmenu_version}") { exclude group: "net.fabricmc"; exclude group: "net.fabricmc.fabric-api" }
+	modLocalRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}") { exclude group: "net.fabricmc"; exclude group: "net.fabricmc.fabric-api" }
 
 	// dependencies
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
@@ -111,4 +114,16 @@ publishing {
 			authentication { basic(BasicAuthentication) }
 		}
 	}
+}
+
+// --- auto-updating ---
+
+autoMaintainer {
+	modrinthUpdateIfAvailable("LazyDFU", "hvFnDODi")
+	modrinthUpdateIfAvailable("Suggestion Provider Fabric", "cz2CENBO")
+	modrinthDisableIfUnavailable("WTHIT", "6AQIaxuO")
+	modrinthDisableIfUnavailable("Sodium", "AANobbMI")
+	modrinthDisableIfUnavailable("Lithium", "gvQqBUqZ")
+	modrinthDisableIfUnavailable("Iris", "YL57xq9U")
+	modrinthDisableIfUnavailable("Mod Menu", "mOgUt4GM")
 }
