--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ minecraft_version = 1.18.2
 loader_version = 0.14.3
 fabric_version = 0.51.1+1.18.2
 # https://lambdaurora.dev/tools/import_quilt.html
-qm_version = 22
-
+qm_build = 22
+lazydfu_version = 0.1.2
 # dev env mods
 
 # https://modrinth.com/mod/sodium
@@ -22,4 +22,6 @@ iris_version = 1.18.x-v1.2.4
 # https://modrinth.com/mod/wthit
 wthit_version = 4.9.1
 # https://modrinth.com/mod/modmenu
-modmenu_version = 3.2.1
+mod_menu_version = 3.2.1
+# https://modrinth.com/mod/suggestionproviderfabric
+suggestion_provider_fabric_version = 1.0.1
