--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,9 @@ lithium_version = mc1.18.2-0.7.9
 # https://modrinth.com/mod/iris
 iris_version = 1.18.x-v1.2.4
 # https://modrinth.com/mod/wthit
-wthit_version = 4.9.1
+wthit_version = fabric-4.9.1
+# https://modrinth.com/mod/badpackets
+bad_packets_version = fabric-0.1.2
 # https://modrinth.com/mod/modmenu
 mod_menu_version = 3.2.1
 # https://modrinth.com/mod/suggestionproviderfabric
