--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ wthit_version = 5.9.0
 # https://modrinth.com/mod/badpackets
 bad_packets_version = 0.1.2
 # https://modrinth.com/mod/modmenu
-modmenu_version = 4.0.6
+mod_menu_version = 4.0.6
 # https://modrinth.com/mod/suggestion-tweaker
 suggestion_tweaker_version = 1.19.1-1.3.1
 # https://modrinth.com/mod/cloth-config
