--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ minecraft_version = 1.19.1
 loader_version = 0.14.9
 fabric_version = 0.58.0+1.19.1
 # https://lambdaurora.dev/tools/import_quilt.html
-qm_version = 1
+qm_build = 1
 
 # dev env mods
 
