--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ mod_menu_version = 4.0.5
 suggestion_tweaker_version = 1.19.1-1.3.1
 # https://modrinth.com/mod/cloth-config
 cloth_config_version = 8.0.75
+# https://modrinth.com/mod/lazydfu
+lazydfu_version = 0.1.3
