--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 }
 
 task buildOrPublish {
+	println project.minecraft_version
 	group = "build"
 	String mavenUser = System.getenv().MAVEN_USER
 	if (mavenUser != null && !mavenUser.isEmpty()) {
