start trying to change default branch

--- a/.github/workflows/try_update.yml
+++ b/.github/workflows/try_update.yml
@@ -49,4 +49,6 @@ jobs:
         if: always()
         run: ./gradlew finalizeUpdate --stacktrace
         env:
-          ACTION_STATUS: ${{ github.action_status }}
+          GH_ACTION_STATUS: ${{ github.action_status }}
+          GH_ACTION_REPOSITORY: ${{ github.action_repository }}
+          GH_TOKEN: ${{ github.token }}
