--- a/.github/workflows/try_update.yml
+++ b/.github/workflows/try_update.yml
@@ -16,6 +16,8 @@ jobs:
       PUBLISH_SUFFIX: snapshots
       MAVEN_USER: ${{ secrets.MAVEN_USER }}
       MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
+    permissions:
+      actions: write
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
