--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,12 @@ archives_base_name = modid
 mod_version = 0.0.<build>
 
 # https://fabricmc.net/develop
-minecraft_version = 1.20.4
-loader_version = 0.15.2
-fabric_version = 0.91.3+1.20.4
+minecraft_version = 1.21-pre3
+minecraft_dependency = >=1.21-beta.3
+loader_version = 0.15.11
+fabric_version = 0.99.5+1.21
 # https://lambdaurora.dev/tools/import_quilt.html
-qm_version = 2
+qm_version = none
 # https://parchmentmc.org/docs/getting-started
 parchment_version = none
 
