--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,18 @@
 name: build
-on: [ pull_request, push ]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+    inputs:
+      type:
+        type: choice
+        description: Type of build
+        required: true
+        options:
+          - normal
+          - snapshot
+          - release
+        default: normal
 
 jobs:
   build:
@@ -7,27 +20,45 @@ jobs:
       matrix:
         java: [ 21 ]
     runs-on: ubuntu-latest
-    env:
-      PUBLISH_SUFFIX: snapshots
-      MAVEN_USER: ${{ secrets.MAVEN_USER }}
-      MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v1
+      - name: Setup Java ${{ matrix.java }}
+        uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
 
-      - name: make gradle wrapper executable
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Make Gradle Wrapper Executable
         run: chmod +x ./gradlew
 
-      - name: build
-        run: ./gradlew buildOrPublish
+      - name: Run Tests
+        run: ./gradlew runGametest
+
+      - name: Build
+        if: ${{ github.event.inputs.type == 'normal' }}
+        run: ./gradlew build
+
+      - name: Publish Snapshot
+        if: ${{ github.event.inputs.type == 'snapshot' }}
+        run: >-
+          ./gradlew publishAllPublicationsToDevOsSnapshotsRepository
+          -PdevOsSnapshotsUsername="${{ secrets.MAVEN_USER }}"
+          -PdevOsSnapshotsPassword="${{ secrets.MAVEN_PASS }}"
+
+      - name: Publish Release
+        if: ${{ github.event.inputs.type == 'release' }}
+        run: >-
+          ./gradlew publishAllPublicationsToDevOsReleasesRepository
+          -PdevOsReleasesUsername="${{ secrets.MAVEN_USER }}"
+          -PdevOsReleasesPassword="${{ secrets.MAVEN_PASS }}"
 
       - name: capture build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Artifacts
           path: build/libs/
